Exercices/solutions/exercice7/ghost-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost-app
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: restricted
    app: ghost
