Exercices/solutions/exercice7/ghost-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-nodeport-service
  namespace: ghost-app
  labels:
    app: ghost
spec:
  type: NodePort
  selector:
    app: ghost
  ports:
  - port: 80
    targetPort: 2368
    nodePort: 30080
    protocol: TCP
